# CollisionDetectionLearning

./: .gitignore  MUJOCO_LOG.TXT  README.md  active_svm.py  config.py  fcl_learning_by_demonstration.py  main.py  mesh_point_collision.py  meta.yaml  svm.py
DynamicsCpp/: CMakeLists.txt  setup.py
DynamicsCpp/src/: .main.cpp.swp  main.cpp
config/: config.py  config_svm.py
cpp/: CMakeLists.txt  main.cpp  weight.cpp  weight.hpp
cpp/include/: utils.hpp
cpp/src/: main.cpp  utils.cpp
module/: MLP.py  NutEnv.py  NutEnv_LQT.py  NutEnv_LQT_mass_uncertainty.py  data_processing.py  dynamics.py  evaluation.py  file_io.py  learning.py  mjc_module.py  normalize.py  plotting.py  sim_evaluation.py  svm_modules.py  training.py  tree.py  util.py
module/gym/: mujoco_env.py  reacher.py
prediction/: predict.m
prediction/cpp/include/: weight.hpp
prediction/cpp/src/: weight.cpp
prediction/matlab/: relu.m
xmls/: bolt_nut.xml
xmls/mesh/: bolt.STL  cone.STL  nut.STL
